// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it adds an astreix to the label if required 1`] = `
<div>
  <div
    class="govuk-form-group lbh-form-group"
  >
    <label
      class="govuk-label lbh-label"
      for="test"
    >
      Test Label
      <sup>
        *
      </sup>
    </label>
    <input
      class="govuk-input lbh-input"
      id="test"
      name="test"
      placeholder="Test Value"
      required=""
    />
  </div>
</div>
`;

exports[`it wraps a TextArea correctly 1`] = `
<div>
  <div
    class="govuk-character-count"
  >
    <div
      class="govuk-form-group lbh-form-group"
    >
      <label
        class="govuk-label lbh-label"
        for="test"
      >
        Test Label
        
      </label>
      <textarea
        class="govuk-textarea lbh-character-count"
        id="test"
        name="test"
      />
    </div>
  </div>
</div>
`;
